--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -3,6 +3,9 @@
   {%- assign all_pages = all_pages | concat: collection.docs -%}
 {%- endfor -%}
 
+{%- comment -%} Add the self-referencing hreflang tag here {%- endcomment %}
+<link rel="alternate" hreflang="{{ page.lang }}" href="{{ site.url }}{{ page.url }}" />
+
 {%- for lang_code in site.languages -%}
   {%- assign current_page_url = page.url -%}
   {%- assign alt_url = nil -%}
@@ -20,19 +23,19 @@
 
   {%- assign alt_page = all_pages | where: "url", alt_url | first -%}
 
-  {%- if alt_page and lang_code != page.lang -%}
-    <link rel="alternate" hreflang="{{ lang_code }}" href="{{ site.url }}{{ alt_page.url }}" />
+  {%- if alt_page and lang_code != page.lang %}
+<link rel="alternate" hreflang="{{ lang_code }}" href="{{ site.url }}{{ alt_page.url }}" />
   {%- endif -%}
 {%- endfor -%}
 
-{%- if page.lang == site.default_lang -%}
-  <link rel="alternate" hreflang="x-default" href="{{ site.url }}{{ page.url }}" />
+{%- if page.lang == site.default_lang %}
+<link rel="alternate" hreflang="x-default" href="{{ site.url }}{{ page.url }}" />
 {%- else -%}
   {%- assign current_prefix = '/' | append: page.lang | append: '/' -%}
   {%- assign default_url = page.url | replace_first: current_prefix, '/' -%}
   {%- assign default_page = all_pages | where: "url", default_url | first -%}
-  {%- if default_page -%}
-    <link rel="alternate" hreflang="x-default" href="{{ site.url }}{{ default_page.url }}" />
+  {%- if default_page %}
+<link rel="alternate" hreflang="x-default" href="{{ site.url }}{{ default_page.url }}" />
   {%- endif -%}
 {%- endif -%}
 
